Fix anchors causing h1 elements to shift.

--- a/themes/cakephp/static/default.css
+++ b/themes/cakephp/static/default.css
@@ -448,7 +448,8 @@ h6:hover .headerlink {
     margin: 0 0 0 5px;
     font-size: 80%;
     padding: 0;
-    line-height: normal;
+    line-height: 95%;
+    vertical-align: center;
 }
 
 
